test_cases/runnable/temp/fail_logical_cal.out
lli: ./test_cases/runnable/fail_logical_cal.compiled:1:1: error: expected top-level entity
Fatal error: exception Failure("illegal binary operator int == bool in i == b")
^
