test_cases/runnable/temp/fail_logical_cal.compiled
Fatal error: exception Failure("illegal binary operator int == bool in i == b")
